--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "mongoose": "^5.9.14",
     "mongoose-validator": "^2.1.0",
     "node-jose": "^1.1.4",
+    "node-wav": "0.0.2",
     "superagent": "^5.2.2",
     "validator": "^13.1.1",
+    "wav": "^1.0.2",
     "winston": "^3.2.1"
   }
 }
