--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jsonwebtoken": "^8.5.1",
     "node-jose": "^2.0.0",
     "superagent": "^6.1.0",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "node-telegram-bot-api": "^0.50.0"
   }
 }
