--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "chastushki app using Yandex SpeechKit (приложения, которое генерирует частушки с помощью Yandex SpeechKit)",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -32,7 +32,9 @@
     "eslint": "^7.15.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "nodemon": "^2.0.6"
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.6",
+    "supertest": "^6.0.1"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
