--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest",
-    "coveralls": "jest --coverage && cat ./tests/coverage/lcov.info | coveralls",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -31,7 +30,6 @@
   },
   "homepage": "https://github.com/t0nyhat/chastushki_js#readme",
   "devDependencies": {
-    "coveralls": "^3.1.0",
     "eslint": "^7.15.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
