--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "supertest": "^6.1.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -48,6 +49,7 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.8",
+    "mongoose-validator": "^2.1.0",
     "node-jose": "^2.0.0",
     "node-telegram-bot-api": "^0.53.0",
     "superagent": "^6.1.0",
