--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "celebrate": "^14.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -53,6 +54,7 @@
     "node-jose": "^2.0.0",
     "node-telegram-bot-api": "^0.53.0",
     "superagent": "^6.1.0",
+    "validator": "^10.11.0",
     "winston": "^3.3.3"
   }
 }
